Fixed errors regarding nonexisting properties of JSONObjects from the met museum API call, added a noimage fallback for when the artwork image doesn't exist